Fixed: Layout issue with ticket split (bug#13700).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
@@ -95,6 +95,10 @@
     position: relative;
 }
 
+#AgentSplitSelection {
+    min-width: 330px;
+}
+
 #TimeLineOverflow {
     overflow-y: hidden;
     max-height: 1173px;
